variables.Variables.scala.error
Compilation error:
Variables:1: error: Missing closing brace `}' assumed here
var pas =0
^