variables.Variables.scala.code
var pas =0
while (!isOverBaggle()) {
  forward();pas+=1
  
}
while (pas !0) {
  backward();pas-=1
pickupBaggle()

dropBaggle()
